// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnhancedMeasurementSwitch should render correctly in the already enabled state 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement"
  >
    <p
      class="googlesitekit-margin-top-0"
    >
      Enhanced measurement is enabled for this web data stream
    </p>
    <p>
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link googlesitekit-cta-link--external"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more
      </a>
    </p>
  </div>
</div>
`;

exports[`EnhancedMeasurementSwitch should render correctly in the default state 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement"
  >
    <div
      aria-checked="false"
      class="mdc-switch"
      role="switch"
      tabindex="0"
    >
      <div
        class="mdc-switch__track"
      >
         
      </div>
      <div
        class="mdc-switch__thumb-underlay"
      >
        <div
          class="mdc-switch__thumb"
        >
          <input
            class="mdc-switch__native-control"
            id="googlesitekit-switch-0"
            readonly=""
            role="switch"
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <label
      class=""
      for="googlesitekit-switch-0"
    >
      Enable enhanced measurement
    </label>
    <p>
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link googlesitekit-cta-link--external"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more
      </a>
    </p>
  </div>
</div>
`;

exports[`EnhancedMeasurementSwitch should render correctly in the disabled state 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement"
  >
    <div
      aria-checked="false"
      class="mdc-switch mdc-switch--disabled"
      role="switch"
      tabindex="0"
    >
      <div
        class="mdc-switch__track"
      >
         
      </div>
      <div
        class="mdc-switch__thumb-underlay"
      >
        <div
          class="mdc-switch__thumb"
        >
          <input
            class="mdc-switch__native-control"
            disabled=""
            id="googlesitekit-switch-1"
            readonly=""
            role="switch"
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <label
      class=""
      for="googlesitekit-switch-1"
    >
      Enable enhanced measurement
    </label>
    <p>
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link googlesitekit-cta-link--external"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more
      </a>
    </p>
  </div>
</div>
`;

exports[`EnhancedMeasurementSwitch should render correctly in the loading state 1`] = `
<div>
  <div
    class="googlesitekit-analytics-enable-enhanced-measurement googlesitekit-analytics-enable-enhanced-measurement--loading"
  >
    <div
      class="mdc-linear-progress googlesitekit-analytics-enable-enhanced-measurement__progress mdc-linear-progress--indeterminate mdc-linear-progress--small"
      role="progressbar"
    >
      <div
        class="mdc-linear-progress__buffering-dots"
      />
      <div
        class="mdc-linear-progress__buffer"
      />
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
      >
        <span
          class="mdc-linear-progress__bar-inner"
        />
      </div>
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
      >
        <span
          class="mdc-linear-progress__bar-inner"
        />
      </div>
    </div>
    <p>
      This allows you to measure interactions with your content (e.g. file downloads, form completions, video views). 
      <a
        aria-label="Learn more (opens in a new tab)"
        class="googlesitekit-cta-link googlesitekit-cta-link--external"
        href="https://support.google.com/analytics/answer/9216061?hl=en-US"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more
      </a>
    </p>
  </div>
</div>
`;
